# paperbroker-client

./: .gitignore  PINETREE.cfg  README.md  pyproject.toml  requirements.txt  setup.py  test.cfg  test_ask.cfg
Tutorial/: README.md
examples/: check_executions.py  logon_test.py  marketmaker.py  place_order_test.py  place_order_with_account_info.py  place_order_with_order_list.py  place_order_with_remain_balance.py  test_balance_combat.py  test_balance_combat_alternating.py  test_portfolio_update.py  two_clients_order_matching.py
fix/: FIX44.xml
paperbroker/: __init__.py  client.py  logger.py
paperbroker/rest/: account_client.py  rest_session.py
paperbroker/session/: OrderManager.py  app.py  handler_admin.py  handler_app.py  handler_logon.py  session_manager.py
