[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperbroker-client"
version = "0.1.2"
description = "Python client for PaperBroker"
authors = [{ name="LoiTran", email="loi.tran@algotrade.vn" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["paperbroker*"]
